--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     content of a page when looking at its layout.<br>
                     The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
             </div>
-            <div class="test">
+            <div class="prof-inner">
                 <div class="prof-left">
                     <h1 class="prof-img"></h1>
                 </div>
